# undockd

./: .gitignore  README.md  TODO.md
app/: Package.swift
app/Sources/Dockd/: AppDelegate.swift  AudioDeviceWatcher.swift  Config.swift  DaemonSupervisor.swift  SettingsView.swift  StateModel.swift  StatusIcon.swift  ToolRunner.swift
app/scripts/: bundle.sh
tools/dockd-tools/: README.md  dockd-tools.spec  pyproject.toml
tools/dockd-tools/src/dockd_tools/: __init__.py  airpods.py  audiocycle.py  bluetooth.py  cliutil.py  config.py  coreaudio.py  dispatch.py  dock.py  homeassistant.py  idle.py  log.py  meeting.py  obs.py  quickkeys_bridge.py
tools/dockd-tools/src/dockd_tools/cli/: audio.py  dock.py  idle.py  meeting.py  obs.py  onair.py  quickkeys.py  virtualcam_sleep.py
tools/dockd-tools/src/dockd_tools/quickkeys/: __init__.py  device.py  protocol.py
tools/dockd-tools/tests/: test_airpods.py  test_audiocycle.py  test_bluetooth.py  test_config.py  test_homeassistant.py  test_meeting.py  test_onair.py  test_quickkeys_bridge.py  test_quickkeys_protocol.py  test_virtualcam_sleep.py
tools/environment/on-air/zoom-ha-link.app/Contents/: Info.plist  document.wflow
tools/environment/on-air/zoom-ha-link.app/Contents/MacOS/: Automator Application Stub
tools/environment/on-air/zoom-ha-link.app/Contents/_CodeSignature/: CodeResources
tools/obs/virtualcam-sleep/: obs_virtual_camera_idle_timeout.sh  seconds_since_inactive.sh
