[project]
name = "dockd-tools"
version = "0.1.0"
description = "Shell-scriptable tools backing the Dockd menubar app (OBS, audio devices, dock detection, on-air light, Xencelabs Quick Keys)"
requires-python = ">=3.11"
dependencies = [
    "obsws-python>=1.7",
    "hidapi>=0.14",
]

[project.scripts]
dockd-obs = "dockd_tools.cli.obs:main"
dockd-audio = "dockd_tools.cli.audio:main"
dockd-dock = "dockd_tools.cli.dock:main"
dockd-idle = "dockd_tools.cli.idle:main"
dockd-meeting = "dockd_tools.cli.meeting:main"
dockd-onair = "dockd_tools.cli.onair:main"
dockd-virtualcam-sleep = "dockd_tools.cli.virtualcam_sleep:main"
dockd-quickkeys = "dockd_tools.cli.quickkeys:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dockd_tools"]

[dependency-groups]
dev = [
    "pytest>=8",
]
